--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "dayjs": "^1.11.13",
     "dotenv": "^16.4.7",
     "formik": "^2.4.5",
-    "jspdf": "^3.0.1",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.4",
     "jspdf-autotable": "^5.0.2",
     "jwt-decode": "^4.0.0",
     "leaflet": "^1.9.4",
@@ -46,6 +47,7 @@
     "react-pro-sidebar": "^1.1.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^6.22.1",
+    "react-to-print": "^3.2.0",
     "yup": "^1.3.3"
   },
   "devDependencies": {
